# dl-project-template

./: .gitignore  .pylintrc  LICENSE.md  README.md  makefile  mypy.ini  pyproject.toml  requirement.txt
.github/workflows/: codeql-analysis.yml
data/interm/: .gitignore
src/: __init__.py  test.py
src/configs/: __init__.py  example.py  example_config.py
src/data/: __init__.py
src/datasets/: __init__.py
src/evaluations/: __init__.py
src/experiments/baseline/: config.yaml
src/experiments/baseline/code_dir/: launcher.py
src/modules/: __init__.py  activation.py  dense_block.py  dense_residual_block.py  get_pytorch_activation.py  get_torch_activation.py  linear_block.py  linear_stack.py  positional_encoding.py  residual_block.py
src/optimization/: __init__.py  get_pytorch_lr_scheduler.py  get_pytorch_optimizer.py  get_torch_lr_scheduler.py  get_torch_optimizer.py
src/tests/: __init__.py  test_evaluator.py  test_get_torch_lr_scheduler.py  test_get_torch_optimizer.py  test_set_random_seed.py  test_sklearn_evaluator.py
src/utilities/: __init__.py  create_directory.py  debug_wrapper.py  evaluator.py  get_class_from_module.py  get_closest_match.py  get_computation_devices.py  get_function_from_module.py  get_module_summary.py  get_object_from_module.py  get_torch_lr_scheduler.py  get_torch_optimizer.py  get_valid_kwargs.py  is_subclass.py  plot_lr_scheduler.py  restrict_function_kwargs.py  set_random_seed.py  sklearn_evaluator.py  tee.py
tests/: __init__.py  test_debug_wrapper.py  test_get_module_summary.py  test_get_torch_lr_scheduler.py  test_get_torch_optimizer.py  test_plot_lr_scheduler.py  test_set_random_seed.py
