[tool.poetry]
name = "dl-project-template"
version = "0.1.0"
description = "a lightweight yet function template for deep learning projects"
authors = ["Xiaotian Duan <xduan7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.0.1"
torch = "^1.4.0"
torchvision = "^0.5.0"
scikit-learn = "^0.22.1"
GPUtil = "^1.4.0"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.761"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
