[tool.poetry]
name = "dl-project-template"
version = "0.1.0"
description = "a lightweight yet function template for deep learning projects"
authors = ["Xiaotian Duan <xduan7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
torch = "^1.8.0"
torchvision = "^0.9.0"
scikit-learn = "^0.24.1"
GPUtil = "^1.4.0"
flake8 = "^3.8.4"
pylint = "^2.7.2"
mypy = "^0.812"
pytest = "^6.2.2"
pytorch-model-summary = {git = "https://github.com/amarczew/pytorch_model_summary.git"}

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
